# stringencoders

./: .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  Doxyfile  INSTALL  Makefile.am  Makefile.in  NumToA.md  Performance.md  PerformanceAscii.md  PerformanceNumToA.md  ProjectHome.md  README  README.md  WebSafeBase64.md  aclocal.m4  boostrap.sh  bootstrap.sh  config.h.in  configure  configure.ac  configure.in  indent.sh  make-ci.sh  makerelease.sh
autom4te.cache/: output.0  requests
cutest/: make-tests.sh
doxy/: header.html
extras/: b64_test.c  jabber64.c
javascript/: base64-test.html  base64.js  urlparse-test.html  urlparse.js
lcov-html/: footer.html
src/: Makefile.am  arraytoc.c  arraytoc.h  html_named_entities_generator.py  modp_ascii.c  modp_ascii.h  modp_ascii_gen.c  modp_b16.c  modp_b16.h  modp_b16_gen.c  modp_b2.c  modp_b2.h  modp_b2_gen.c  modp_b36.c  modp_b36.h  modp_b64.c  modp_b64.h  modp_b64_gen.c  modp_b64r.h  modp_b64w.h  modp_b85.c  modp_b85.h  modp_b85_gen.c  modp_bjavascript.c  modp_bjavascript.h  modp_bjavascript_data.h  modp_bjavascript_gen.c  modp_bjson.c  modp_bjson.h  modp_bjson_data.h  modp_burl.c  modp_burl.h  modp_burl_data.h  modp_burl_gen.c  modp_html.c  modp_html.h  modp_html_named_entities.h  modp_json.c  modp_json.h  modp_json_data.h  (+14 more)
test/: apr_base64.c  apr_base64.h  cxx_test.cc  minunit.h  modp_ascii_test.c  modp_b16_test.c  modp_b2_test.c  modp_b64_test.c  modp_b85_test.c  modp_bjavascript_test.c  modp_burl_test.c  modp_html_test.c  modp_json_test.c  modp_numtoa_test.c  modp_qsiter_test.c  modp_utf8_test.c  modp_xml_test.c  speedtest.c  speedtest_ascii.c  speedtest_msg.c  speedtest_numtoa.c
test/fuzz/: modp_toupper_fuzzer.c  modp_utf8_validate_fuzzer.c  modp_xml_decode_fuzzer3.c
trunk/: COPYING  ChangeLog  Doxyfile  INSTALL  Makefile.am  Makefile.in  boostrap.sh  config.h.in  configure  configure-gcc-hardened.sh  configure.ac  index.html  makerelease.sh  performance-data.html
trunk/autom4te.cache/: traces.0
trunk/cutest/: README
trunk/doxy/: footer.html
trunk/extras/: b64.c  b64.h  b64_constants.c  jabber64.h  performance.c
trunk/javascript/: base64-test.html  base64.js  urlparse-test.html  urlparse.js
trunk/lcov-html/: header.html
trunk/python/: b85.py
trunk/src/: Makefile.am  arraytoc.c  arraytoc.h  html_named_entities_generator.py  modp_ascii.c  modp_ascii.h  modp_ascii_gen.c  modp_b16.c  modp_b16.h  modp_b16_gen.c  modp_b2.c  modp_b2.h  modp_b2_gen.c  modp_b64.c  modp_b64.h  modp_b64_gen.c  modp_b64r.h  modp_b64w.h  modp_b85.c  modp_b85.h  modp_b85_gen.c  modp_bjavascript.c  modp_bjavascript.h  modp_bjavascript_data.h  modp_bjavascript_gen.c  modp_bjson.c  modp_bjson.h  modp_burl.c  modp_burl.h  modp_burl_data.h  modp_burl_gen.c  modp_html.c  modp_html.h  modp_html_named_entities.h  modp_json.c  modp_json.h  modp_json_data.h  modp_mainpage.h  modp_messagepack.c  modp_messagepack.h  (+6 more)
trunk/test/: Makefile.am  apr_base64.c  apr_base64.h  cxx_test.cc  minunit.h  modp_ascii_test.c  modp_b16_test.c  modp_b2_test.c  modp_b64_test.c  modp_b85_test.c  modp_bjavascript_test.c  modp_burl_test.c  modp_html_test.c  modp_json_test.c  modp_numtoa_test.c  modp_qsiter_test.c  modp_utf8_test.c  speedtest.c  speedtest_ascii.c  speedtest_msg.c  speedtest_numtoa.c
wiki/: ModpAscii.wiki  NumToA.wiki  Performance.wiki  PerformanceAscii.wiki  PerformanceNumToA.wiki  WebSafeBase64.wiki
